<resources>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="app_name">AuthentiFi</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="product_valid">Product Valid</string>
    <string name="product_not_shipped">Product Not Shipped</string>
    <string name="product_delivered">Product Delivered</string>
    <string name="product_delivery_confirmation">Delivery Confirmation</string>
    <string name="product_in_transit">Product in Transit</string>
    <string name="product_valid_description">This product has been traced back to its factory.</string>
    <string name="product_not_shipped_description">This Product has not been shipped.</string>
    <string name="product_delivered_description">This product has been reported as delivered.</string>
    <string name="product_fake">Product Fake</string>
    <string name="product_stolen_description">This product is fake.</string>
    <string name="product_unregistered">Product Invalid</string>
    <string name="product_unregistered_description">This product is not registered.</string>
    <string name="product_manufacturer">Manufactured by %1$s on %2$s</string>
    <string name="product_picker">Picked for delivery by %1$s on %2$s</string>
    <string name="product_confirmed">Product delivery confirmed by %1$s on %2$s</string>
    <string name="product_delivery_info">Picked Mark As delivered by %1$s</string>
    <string name="product_on_way">Product is on it way!</string>
    <string name="product_sold">Product waiting to be pick for delivery</string>
    <string name="product_confirm">Confirm</string>
    <string name="product_deliver">Deliver</string>
    <string name="product_pickup">Pick Product</string>
    <string name="product_report_stolen">Report Stolen</string>
    <string name="product_previous_owner">You purchased this asset from %1$s on %2$s</string>
    <string name="product_confirm_delivery">Confirm the delivery of this product.</string>

    <string name="signup">New Logistic Provider? <u>Sign Up</u></string>
    <string name="retailerlogin">Retailer Login</string>
    <string name="userlogin">User Login</string>

    <string name="sell_step1">1. Seller selects the product and gets a QR code</string>
    <string name="sell_step2">2. Buyer scans the same QR code</string>
    <string name="sell_step3">3. Buyer scans the product to be bought</string>

    <string name="assets_head">My Assets</string>
    <string name="products_head">My Products</string>
    <string name="deliveries_head">My Deliveries</string>
    <string name="profile_head">My Profile</string>
</resources>